Revert "[docs] Fix backdrops on iOS 26 (#2848)" (#2874)

--- a/docs/src/app/(public)/(content)/react/components/dialog/demos/hero/css-modules/index.module.css
+++ b/docs/src/app/(public)/(content)/react/components/dialog/demos/hero/css-modules/index.module.css
@@ -34,9 +34,8 @@
 }
 
 .Backdrop {
-  position: absolute;
+  position: fixed;
   inset: 0;
-  min-height: 100dvh;
   background-color: black;
   opacity: 0.2;
   transition: opacity 150ms cubic-bezier(0.45, 1.005, 0, 1.005);
